--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "instill-ai",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.7.23",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "esbuild": "^0.15.9"
   }
 }
