--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "@instill-ai/design-token",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "description": "This is instill-ai's design token",
+  "main": "build/index.esm.js",
+  "types": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ts-types": "tsc --emitDeclarationOnly --outDir build",
+    "build": "pnpm rimraf build && node ./esbuild.js && pnpm ts-types"
   },
   "keywords": [],
   "author": "instill-ai",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.7.23",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
   },
