--- a/.github/workflows/dispatch-new-tokens.yml
+++ b/.github/workflows/dispatch-new-tokens.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Check out new branch
         uses: actions/checkout@v3
         with:
-          path: tokens-dev
+          ref: tokens-dev
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@1.1.2
