--- a/.github/workflows/dispatch-new-tokens.yml
+++ b/.github/workflows/dispatch-new-tokens.yml
@@ -9,9 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out new branch
-        uses: actions/checkout@v3
-        with:
-          ref: tokens-dev
+        uses: actions/checkout@master
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@1.1.2
