--- a/.github/workflows/dispatch-new-tokens.yml
+++ b/.github/workflows/dispatch-new-tokens.yml
@@ -8,8 +8,10 @@ jobs:
     name: Transform Figma design tokens for specific platforms
     runs-on: ubuntu-latest
     steps:
-      - name: Check out new branch
-        uses: actions/checkout@master
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Check out dev branch
+        run: git checkout -b new-tokens-dev
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@1.1.2
