--- a/.github/workflows/dispatch-new-tokens.yml
+++ b/.github/workflows/dispatch-new-tokens.yml
@@ -8,12 +8,8 @@ jobs:
     name: Transform Figma design tokens for specific platforms
     runs-on: ubuntu-latest
     steps:
-      - name: Check out new branch
+      - name: Check out code
         uses: actions/checkout@v3
-        with:
-          path: tokens-dev
-      - name: Remove old tokens
-        run: rm -f "src/tokens/original-tokens.json"
       - name: create json from request body
         id: create-json
         uses: jsdaniell/create-json@1.1.2
@@ -24,7 +20,6 @@ jobs:
       - name: Create PR
         uses: peter-evans/create-pull-request@v4
         with:
-          branch: "main"
           token: ${{ secrets.BOTGITHUBTOKEN }}
           commit-message: "feat: update design tokens"
           title: "feat: update design tokens"
