feat: add transform-tokens into dispatch action

--- a/.github/workflows/dispatch-new-tokens.yml
+++ b/.github/workflows/dispatch-new-tokens.yml
@@ -17,6 +17,36 @@ jobs:
           name: "original-tokens.json"
           json: ${{ github.event.client_payload.tokens }}
           dir: "src/tokens"
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
+
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      - name: Install dependencies
+        run: rm -rf node_modules && pnpm i --frozen-lockfile
+
+      - name: Transform tokens
+        run: pnpm transform-tokens
+
       - name: Create PR
         uses: peter-evans/create-pull-request@v4
         with:
