feat: add more node config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@instill-ai/design-token",
   "version": "0.0.1",
+  "private": false,
   "type": "module",
   "description": "This is instill-ai's design token",
   "main": "build/index.esm.js",
@@ -11,7 +12,12 @@
     "test": "node --no-warnings --loader tsx --test ./src/**/*.test.ts",
     "transformed-tokens": "tsx ./src/scripts/transform-tokens.ts"
   },
-  "keywords": [],
+  "keywords": [
+    "instill-ai",
+    "design-system",
+    "design-token",
+    "tailwindcss"
+  ],
   "author": "instill-ai",
   "license": "MIT",
   "devDependencies": {
@@ -23,5 +29,8 @@
   },
   "dependencies": {
     "esbuild": "^0.15.9"
+  },
+  "peerDependencies": {
+    "tailwindcss": ">=3.0.0"
   }
 }
