--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,22 +1,14 @@
-name: ci-unit-test
+name: publish
 
 on:
-  push:
-    branches:
-      - "*"
-      - "!main"
+  release:
+    types: [published]
 
 jobs:
-  unit-test:
-    # skip the test of release bot opened PR to main
-    if: ${{ !contains(github.ref, 'release') }}
-
+  publish:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -45,5 +37,12 @@ jobs:
       - name: Install dependencies
         run: rm -rf node_modules && pnpm i --frozen-lockfile
 
-      - name: Run tests
+      - name: Run test
         run: pnpm test
+
+      - name: Build
+        run: pnpm build
+
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
