--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "type": "module",
   "main": "build/index.esm.js",
-  "types": "",
+  "types": "build/insex.d.ts",
   "scripts": {
     "ts-types": "tsc --emitDeclarationOnly --outDir build",
     "build": "pnpm rimraf build && node ./esbuild.js && pnpm ts-types",
